<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primaryLight"
    tools:context=".FileCreation">

    <!-- Fragment Container that will store toolbar of the app -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/appbar_container"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:name="com.example.teamdolphin.ToolbarFragment"
        tools:layout="@layout/fragment_toolbar" />

    <View
        android:id="@+id/colored_bar27"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:background="#959595"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_container"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_createProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Project"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:src="@drawable/cancel_icon"
        app:layout_constraintStart_toEndOf="@+id/text_createProject"
        android:name="com.example.teamdolphin.ToggleTheme"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container" />

    <ImageView
        android:id="@+id/image_preview_container"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/drawable_solid_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container">
    </ImageView>

    <ImageButton
        android:id="@+id/button_import"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-8dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/import_icon"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/image_preview_container"
        app:layout_constraintStart_toEndOf="@+id/image_preview_container" />

    <EditText
        android:id="@+id/field_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Width(Optional)"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview_container" />

    <EditText
        android:id="@+id/field_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Height(Optional)"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_width" />

    <EditText
        android:id="@+id/field_projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Project Name"
        android:text=""
        android:clickable="false"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_height" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="Create"
        android:textColor="@color/black"
        android:backgroundTint="@color/color_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:text="Background Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_projectName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/fc_dark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dark"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="454dp" />

        <RadioButton
            android:id="@+id/fc_light_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Light"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="454dp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>