<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TesterCanvas">


    <!-- This is a new version of the toolbar for a java implementation of the canvas -->
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/appbar_container2"
            android:name="com.example.teamdolphin.ToolbarFragment"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/fragment_toolbar"
            tools:layout_editor_absoluteX="-4dp" />

        <View
            android:id="@+id/colored_bar6"
            android:layout_width="420dp"
            android:layout_height="2dp"
            android:background="#959595"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/colored_bar"
            app:layout_constraintVertical_bias="0.181" />


        <GridLayout
            android:id="@+id/tools_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="4"
            android:alignmentMode="alignBounds"
            android:background="#AAAAAA">

            <ImageButton
                android:id="@+id/button_undo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/undo_icon"
                android:text="Undo" />

            <ImageButton
                android:id="@+id/button_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/color_picker_icon"
                android:text="Color Picker" />

            <ImageButton
                android:id="@+id/button_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/brush_24"
                android:text="Stroke" />

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/menu_icon"
                android:text="Stroke" />

            <ImageButton
                android:id="@+id/button_brush"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/brush_24"
                android:visibility="gone"
                android:text="Brush" />

            <ImageButton
                android:id="@+id/button_eraser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/eraser_vector"
                android:text="Undo"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_shape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/shapes_vector"
                android:text="Stroke"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/button_eyedropper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/eye_dropper_vector"
                android:text="Stroke"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/save_icon"
                android:text="Save"
                android:visibility="gone"/>

            <!--<ImageButton
                android:id="@+id/button_selection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/select_icon"
                android:text="Undo"
                android:visibility="gone"/> -->

            <ImageButton
                android:id="@+id/button_paintbucket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/paint_bucket_vector"
                android:text="Save"
                android:visibility="gone"/>

            <!--<ImageButton
                android:id="@+id/button_pen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/pen_vector"
                android:text="Stroke"
                android:visibility="gone"/> -->

<!--            <ImageButton-->
<!--                android:id="@+id/button_colorpreview"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_columnWeight="1"-->
<!--                android:src="@drawable/color_preview_icon"-->
<!--                android:text="Stroke"-->
<!--                android:visibility="gone"/>-->

            <ImageButton
                android:id="@+id/button_drag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:visibility="gone"
                android:text="Stroke"
                app:srcCompat="@drawable/drag_icon" />

            <ImageButton
                android:id="@+id/button_zoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:text="Stroke"
                android:visibility="gone"
                app:srcCompat="@drawable/zoom_icon" />

            <ImageButton
                android:id="@+id/button_rotate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:visibility="gone"
                android:text="Stroke"
                app:srcCompat="@drawable/rotate_icon" />
            <ImageButton
                android:id="@+id/button_fix_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:visibility="gone"
                android:text="Stroke"
                app:srcCompat="@drawable/ic_baseline_add_to_home_screen_24" />
            <ImageButton
                android:id="@+id/button_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/home_icon"
                android:text="Stroke"
                android:visibility="gone"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebarzoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebarrotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/CanvasUIRowShapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:visibility="gone">

<!--        <ImageButton-->
<!--            android:id="@+id/button_rect"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Stroke"-->
<!--            android:visibility="visible"-->
<!--            app:srcCompat="@drawable/square_icon" />-->

        <ImageButton
            android:id="@+id/button_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Stroke"
            android:visibility="visible"
            app:srcCompat="@drawable/circle_vector" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebarcircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangebarrectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangebareraser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:scaleY="1"
        android:scaleX="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/canvasbackground">
        <com.example.teamdolphin.DrawView
            android:id="@+id/draw_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>